--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -3,22 +3,11 @@
   font-weight: bold;
 }
 
-/* .webwindow-headerbar {
-  opacity: 0;
-  min-height: 20px;
-}
-
-.webwindow-headerbar:hover {
-  opacity: 1;
-  min-height: 20px;
-} */
-
 .webwindow-close {
   opacity: 0;
-  transition: opacity 0.3s;
+  transition: 0.1s ease-in-out;
 }
 
 .webwindow-close:hover {
   opacity: 1;
-  transition: opacity 0.3s;
 }
