--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -6,12 +6,13 @@
   font-weight: bold;
 }
 
-.webwindow-close {
+.webwindow-controls {
   opacity: 0;
+  filter: drop-shadow(0 0 0.5rem white);
   transition: 0.1s ease-in-out;
 }
 
-.webwindow-close:hover {
+.webwindow-controls:hover {
   opacity: 1;
 }
 
