--- a/data/resources/style-dark.css
+++ b/data/resources/style-dark.css
@@ -1,8 +1,8 @@
 @define-color accent_color #447BBE;
 @define-color accent_bg_color #447BBE;
 
-  .webwindow-controls {
-    filter: drop-shadow(0 0 0.5rem black);
+  .webwindow-controls button image {
+    background: rgba(61, 56, 70, 1);
   }
 
   @keyframes screenshot-flash {
