--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -8,8 +8,11 @@
 
 .webwindow-controls {
   opacity: 0;
-  filter: drop-shadow(0 0 0.5rem white);
   transition: 0.1s ease-in-out;
+}
+
+.webwindow-controls button image {
+  background: rgba(239, 239, 239, 1);
 }
 
 .webwindow-controls:hover {
